# zelda_guardian_robot

./: Li-ion_103450.SLDPRT  README.md  bevel_gear_25x1x12.SLDPRT  bevel_gear_25x1x8.SLDPRT  decorative_gear.SLDPRT  oled_transparent.SLDPRT  sdkconfig  sdkconfig.old  servo&gear2.SLDASM  servo&gear_connector.SLDPRT  servo_motor(MG90D).SLDPRT  servo_motor(mini).SLDPRT  shaft_12x0.5.SLDPRT  shaft_6x0.5.SLDPRT  shaft_8x0.5.SLDPRT  spur_gear_22x1_10.1.SLDPRT
code/: partitions.csv  sdkconfig
code/main/: main.c
code/main/argb/: rgb_ctrl.c
code/main/ble_hid/: hid_host_gamepad.c  hid_host_gamepad.h
code/main/common/: common_func.h
code/main/oled/: font.h  oled_main.c  oled_main.h
code/main/pwr_ctrl/: pwr_ctrl.c  pwr_ctrl.h
code/main/servo/: servo_control.c
code/main/sound/: i2s_std_sound.c  i2s_std_sound.h
code/main/status_machine/: status_machine.c  status_machine.h
code/spiffs_image/: readme.md
legacy/: spur_gear_20×1.SLDPRT
main/: CMakeLists.txt  main.c
main/argb/: rgb_ctrl.c  rgb_ctrl.h
main/ble_hid/: hid_host_gamepad.c  hid_host_gamepad.h
main/common/: common_func.c
main/oled/: oled_drv.c  oled_drv.h  oled_main.c  picture.h
main/pwr_ctrl/: pwr_ctrl.c  pwr_ctrl.h
main/servo/: servo_control.c  servo_control.h
main/sound/: i2s_std_sound.c  sight_locking.pcm  sight_search.pcm
main/status_machine/: status_machine.c  status_machine.h
material/: temp.pptx
model/: 18650_with_protector.SLDPRT  bevel_gear_25x1x6.SLDPRT  bottom.SLDPRT  foot.SLDPRT  guardian_head.SLDASM  head_connector.SLDPRT  laser.SLDPRT  leg.SLDASM  mini_handle.SLDPRT  servo&gear.SLDASM  servo_motor_holder.SLDPRT  servo_motor_holder2.SLDPRT  shaft_10x0.8(2).SLDPRT  shaft_10x0.8.SLDPRT  shaft_12x0.5(2).SLDPRT  speaker.SLDPRT  spur_gear_22x1_12.SLDPRT
model/legacy/: handle2(MG90D).SLDPRT
pcb/: ProProject_zelda_guardian.epro
pcm_sound/: beam.pcm
spiffs_image/: readme.md
testchip/: head_corner.STL
